[4/5][platform] Remove deprecated Integer constructor usage.